--- a/src/app/search/criteria/basic-input/basic-input.component.less
+++ b/src/app/search/criteria/basic-input/basic-input.component.less
@@ -1,4 +1,17 @@
-.min-w-250 {
+.works-select-wrapper {
+  margin-bottom: 1em;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.works-select {
   width: 100%;
-  min-width: 250px;
+  max-width: 450px;
+}
+
+.works-select-label {
+  margin-top: 0.05em;
+  margin-right: 0.5em;
+  font-size: large;
 }
