fix code smells

--- a/src/app/read/text/work-info/work-info.component.html
+++ b/src/app/read/text/work-info/work-info.component.html
@@ -48,6 +48,7 @@
     <a
       href="{{ korporaUrl }}/aa{{ geWithLeadingZeros(work.volumeNumber) }}/"
       target="_blank"
+      rel="noopener"
     >
       korpora.org &#x29c9;
     </a>
