--- a/src/app/read/text/notes/notes.component.html
+++ b/src/app/read/text/notes/notes.component.html
@@ -1,7 +1,7 @@
 <nz-divider [nzText]="'READ.NOTES.HEADER' | translate"></nz-divider>
 
-<nz-space class="w-full" nzDirection="vertical">
-  <div *nzSpaceItem nz-row>
+<ul class="w-full">
+  <li>
     {{ "READ.NOTES.KORPORA_LINK" | translate }}:&nbsp;
     <a
       href="{{ korporaUrl }}/aa{{ geWithLeadingZeros(work.volumeNumber) }}/"
@@ -10,9 +10,9 @@
     >
       korpora.org &#x29c9;
     </a>
-  </div>
+  </li>
 
-  <div *nzSpaceItem nz-row>
+  <li>
     {{ "READ.NOTES.PAGINATION" | translate }}
-  </div>
-</nz-space>
+  </li>
+</ul>
