fix: allow hits without highlights

--- a/src/app/search/results/result-list/result-item/result-item.component.html
+++ b/src/app/search/results/result-list/result-item/result-item.component.html
@@ -41,7 +41,9 @@
 
           <div *nzSpaceItem>
             <ks-text-block
-              [text]="'...' + snippet.text + '...'"
+              [text]="
+                (snippet.hasHighlights ? '...' : '') + snippet.text + '...'
+              "
             ></ks-text-block>
           </div>
         </div>
